# water-server-be

./: .gitignore  create_events_json.py  create_googleapi_token.py  create_googleapi_token_from_response.py  create_rich_menu.py  dump_entries_to_excel.py  main.py  pyproject.toml  serve.py  set_is_reminded_example.py  set_webhook_url.py
common/: consts.py  get_logger.py  line_bot_client.py  message_templetes.py  mocks.py  utils.py
controllers/: events_controller.py  linebot_controller.py  movies_controller.py  root_controller.py
line_message_templates/: select_entry_events_template.py  select_option_to_entry_template.py  show_members_template.py
repositories/: mongo_repository.py  youtube_repository.py
scripts/: create_events_json.py  create_rich_menu.py  dump_entries_to_excel.py  launch_tunnel.py  set_webhook_url.py
services/: create_rich_menu.py  ngrok_service.py  postback_service.py  remind_service.py
templates/: events.html  events_delete.html  events_register.html  index.html  movies.html  select_entry_events_template.py  select_option_to_entry_template.py  show_members_template.py
