[tool.poetry]
name = "water-server-be"
version = "0.1.0"
description = ""
authors = ["shingaryu <shingaryu@gmail.com>"]
readme = "README.md"
#packages = [{include = "water_server_be"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "~2.2"
python-dotenv = "0.21.1"

[tool.poetry.group.dev.dependencies]
line-bot-sdk = "^2.4.2"
pymongo = "^4.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
